color styling changes'

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <section id="done-page">
                 <h2 id="done-msg">All done!</h2>
                 <p id="final-score"></p>
+                <img src="assets/hooray.gif" alt="cheering art"><br>
                 <label for="initials">Enter initials:</label>
                 <input type="text" id="initials" name="initials">
                 <button id="submit-button">Submit</button>
@@ -46,7 +47,7 @@
             <section id="highscores">
                 <h2>Highscores: </h2>
                 <ol class="scores"></ol> <!--append to this list-->
-                <button id="go-back">Go Back</button>
+                <button id="back-button">Go Back</button>
                 <button id="clear-button">Clear Highscores</button><br><br>
             </section>
         </main>
